# RAGGER

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/versions/: 20260614_01_create_user_table.py
apps/backend/app/: main.py
apps/backend/app/api/v1/endpoints/: auth.py
apps/backend/app/core/: config.py
apps/backend/app/models/: user.py
apps/backend/app/schemas/: user.py
apps/backend/app/services/: auth.py  user.py
apps/frontend/: index.html  package-lock.json  package.json
apps/frontend/src/: index.css  main.tsx
apps/frontend/src/components/layout/: dashboard-layout.tsx  sidebar.tsx
apps/frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/pages/: dashboard.tsx  login.tsx  section.tsx
