[project]
name = "ragger-backend"
version = "0.1.0"
description = "FastAPI backend service for RAGGER."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.1",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=74.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
